polished by Elena

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -5,7 +5,7 @@
 
 \begin{abstract}
 
-随着机器学习、数据分析等领域的快速发展，单个机器提供的资源已经无法满足应用的需求，而分布式系统可以为上层应用提供海量的计算、内存等资源，越来越受到学术界和工业界的关注。巨型虚拟机解决了现有软件和分布式系统的兼容性问题，将多台物理上分隔的物理机虚拟化为单个虚拟机，为上层软件提供一致的操作系统接口，现有软件无需修改即可运行在由多个节点组成的分布式系统上。而分布式系统资源利用率低的问题依然存在。不同的任务对CPU等资源的需求大不相同，同一任务的资源需求量也在快速变化。这使得给任务分配的固定额度的资源被严重地浪费。工业界给出的数据表明，集群的CPU使用率偏低的问题依然存在，举例而言，亚马逊的分布式集群的CPU平均使用率仅有7\%-17\%。而巨型虚拟机具有高效简便的任务迁移能力，由于其向客户机操作系统暴露了一个NUMA（非一致性共享内存）架构的虚拟机环境，每一个NUMA节点即是一个分布式集群中的物理节点，只需编写客户机中的任务调度器，即可将CPU占用率较高的节点上的任务调度到另一个CPU占用较低的节点，从而保证了服务的质量，同时提高了分布式集群总体的CPU资源使用率。本文通过尝试设计巨型虚拟机的任务调度器，动态感知宿主机中不可迁移任务的工作负载，将可迁移任务在巨型虚拟机中按需迁移，达到了提高分布式集群CPU使用率、保证时延敏感任务的服务质量的效果。同时利用Google Trace对分布式集群进行仿真，模拟一个分布式集群中任务的调度过程，比较并分析了不同调度策略的性能，及其对集群资源使用率、服务质量的影响。
+随着机器学习、数据分析等领域的快速发展，单个机器提供的资源已经无法满足应用的需求，而分布式系统可以为上层应用提供海量的计算、内存等资源，越来越受到学术界和工业界的关注。巨型虚拟机解决了现有软件和分布式系统的兼容性问题，将多台物理上分隔的物理机虚拟化为单个虚拟机，为上层软件提供一致的操作系统接口，现有软件无需修改即可运行在由多个节点组成的分布式系统上。而分布式系统资源利用率低的问题依然存在。不同的任务对CPU等资源的需求大不相同，同一任务的资源需求量也在快速变化。这使得给任务分配的固定额度的资源被严重地浪费。工业界给出的数据表明，集群的CPU使用率偏低的问题依然存在，举例而言，亚马逊的分布式集群的CPU平均使用率仅有7\%-17\%。而巨型虚拟机具有高效简便的任务迁移能力，由于其向客户机操作系统暴露了一个NUMA（非一致性共享内存）架构的虚拟机环境，每一个NUMA节点即是一个分布式集群中的物理节点，只需编写客户机中的任务调度器，即可将CPU占用率较高的节点上的任务调度到另一个CPU占用较低的节点，从而提高分布式集群总体的CPU资源使用率，同时保证服务质量。本文通过尝试设计巨型虚拟机的任务调度器，动态感知宿主机中不可迁移任务的工作负载，将可迁移任务在巨型虚拟机中按需迁移，达到了提高分布式集群CPU使用率、保证时延敏感任务的服务质量的效果。同时利用Google Trace对分布式集群进行仿真，模拟一个分布式集群中任务的调度过程，比较并分析了不同调度策略的性能，及其对集群资源使用率、服务质量的影响。
 
 \keywords{\large 巨型虚拟机，调度策略，分布式系统，资源使用率，任务迁移}
 \end{abstract}
@@ -13,7 +13,7 @@
 \begin{englishabstract}
 
 
-With the rapid evolution of machine learning and data analysis, a single machine fails to provide sufficient resources to the current applications. Distributed systems have the ability to provide a vast amount of computing and memory resources to the upper applications, thus gaining more and more attention from both the industry and the academy. Giant Virtual Machine(GiantVM) solves the compatibility problem between conventional software and distributed environments. It virtualizes multiple physically separated machines to be a single virtual machine, providing a consistent OS interface to the upper software. As a result, traditional applications are able to run on a clustered environment consisted of multiple nodes without any modification. However, the low resource utilization problem still continues to exist. The demand of resources varies among different tasks, and resources required by the same task also changes dramatically over time. As a result, there is a serious waste of a fixed amount of resources assigned to the tasks. Data reported by the industry indicates the under-utilized CPU resources in the distributed environments. For example, average CPU utilization is only 7\%-17\% in an Amazon cluster. Giant Virtual Machine, however, facilitates the migration of tasks among the cluster, as it exposes a NUMA(Non-uniform memory access) machine to the guest OS, in which a dedicated scheduler can be designed to migrate tasks between busy and idle virtual NUMA nodes, which are physical nodes in a cluster. Thus, QoS (Quality of Service) is guaranteed, and CPU utilization is increased. This paper devises a task scheduler in GiantVM that can dynamically detects the workload of non-migratable tasks in the host and migrate those migratable tasks in GiantVM, thus optimizing the CPU utilization rate in the cluster and ensuring the QoS of LC(latency critical) tasks. Also, Google trace is used to simulate the migrating and scheduling of tasks in a cluster, to compare the performance of multiple scheduling policies and their effects on resource utilization and QoS in a distributed environment.
+With the rapid evolution of machine learning and data analysis, a single machine fails to provide sufficient resources to the current applications. Distributed systems have the ability to provide a vast amount of computing and memory resources to the upper applications, thus gaining more and more attention from both the industry and the academy. Giant Virtual Machine(GiantVM) solves the compatibility problem between conventional software and distributed environments. It virtualizes multiple physically separated machines to be a single virtual machine, providing a consistent OS interface to the upper software. As a result, traditional applications are able to run on a clustered environment consisted of multiple nodes without any modification. However, the low resource utilization problem still continues to exist. The demand of resources varies among different tasks, and resources required by the same task also changes dramatically over time. As a result, there is a serious waste of a fixed amount of resources assigned to the tasks. Data reported by the industry indicates the under-utilized CPU resources in the distributed environments. For example, average CPU utilization is only 7\%-17\% in an Amazon cluster. Giant Virtual Machine, however, facilitates the migration of tasks among the cluster, as it exposes a NUMA(Non-uniform memory access) machine to the guest OS, in which a dedicated scheduler can be designed to migrate tasks between busy and idle virtual NUMA nodes, which are physical nodes in a cluster. Thus, CPU utilization is increased，and QoS (Quality of Service) of tasks is guaranteed. This paper devises a task scheduler in GiantVM that can dynamically detects the workload of non-migratable tasks in the host and migrate those migratable tasks in GiantVM, thus optimizing the CPU utilization rate in the cluster and ensuring the QoS of LC(latency critical) tasks. Also, Google trace is used to simulate the migrating and scheduling of tasks in a cluster, to compare the performance of multiple scheduling policies and their effects on resource utilization and QoS in a distributed environment.
 
 \englishkeywords{\large Giant Virtual Machine， scheduling policy， distributed system， resource utilization， task migration }
 \end{englishabstract}
