--- a/tex/chapter02.tex
+++ b/tex/chapter02.tex
@@ -6,7 +6,7 @@
 \chapter{技术背景}
 \label{chap:RL}
 \section{进程内存管理简述}
-内存作为程序使用最频繁的计算机部件之一，为程序的内存和代码提供了存放空间，又为程序访问磁盘提供了缓存，提高了磁盘I/O的效率。可以说，对于任何一个程序，如果它不高效地使用内存，那么它的运行效率也将会十分低下。而Linux内核\cite{linux}对物理内存的利用更是精益求精。在开始本文的论述前，有必要对Linux程序如何使用内存有大致的了解。
+内存作为程序使用最频繁的计算机部件之一，为程序的内存和代码提供了存放空间，又为程序访问磁盘提供了缓存，提高了磁盘I/O的效率。可以说，对于任何一个程序，如果它不高效地使用内存，那么它的运行效率也将会十分低下，而Linux内核\cite{linux}对物理内存的利用更是精益求精。在开始本文的论述前，有必要对Linux程序如何使用内存进行大致的描述。
 \subsection{虚拟内存及其分布}
 现代操作系统将物理内存抽象为一个私有的虚拟地址空间，使得物理内存可以被多个进程公平地使用，且不会相互写入对方的内存。Linux为每个进程提供了一个页表（Page Table），当进程被调度运行时，操作系统将CR3寄存器更新为进程页表的基地址。每一个CPU核都有一个MMU（内存管理单元），当CPU发出访存指令时，MMU接收CPU发来的虚拟地址，通过查询页表得知CPU发送的虚拟地址所对应的物理地址。虚拟地址空间的大小由系统的字宽来决定：对于一个32位的系统，CPU的访存能力是0 ～ $2^{32}-1$，故该系统下每个进程的虚拟地址空间大小为4G；而对于一个64位的系统，CPU的访存能力是0 ～ $2^{64}-1$，然而由于这是一个很大的数字，目前还没有程序可以使用到如此大的虚拟地址空间，故CPU访存仅使用48位，所以虚拟地址空间是$2^{48}$，即256T的虚拟地址空间。物理内存和其他存储层次中的存储设备一样，将自己划分为相同大小的块进行管理，一般为4KB，即4096个byte。相类似的，虚拟地址空间的管理单位也是4096KB。虚拟内存中每一个4K大小的块称为虚拟页，而物理内存中每一个4K大小的块称为物理页，或称为页帧。物理内存以页帧为单位和磁盘做数据交换，作为磁盘访问的缓存。每当CPU访问一个虚拟地址时，MMU将虚拟地址翻译为物理地址，再去内存的缓存中获取数据。如果获取不到，则会去内存中查找数据。相类似的，如果内存中也找不到该内存地址的数据，则会发生缺页异常（page fault），此时内核会调用page fault处理函数，从磁盘上读取相应数据，加载到内存中来。
 \label{chap:mem}
@@ -29,6 +29,7 @@ Linux将每个进程的虚拟地址空间划分为许多部分，映射到不同
     {Mechanism of Linux Virtual Memory Mapping}
   \label{fig:MEM}
 \end{figure}
+
 由此可见，物理内存页的状态分为三种：没有被映射到任何进程的虚拟内存里（未使用的物理内存页），被映射到唯一的线程的虚拟地址空间里（例如线程的用户栈），被多个进程共享（如共享库）；而所有的虚拟页也分为三种：未被映射的虚拟内存页，映射到独占的物理内存的虚拟内存页，以及映射到共享内存的虚拟内存页。如图\ref{fig:MEM}所示，进程A、B的虚拟内存由已映射物理内存的页和未映射物理内存的页组成，其中A1、A2、A3物理页由进程A独占，B1、B2物理页由进程B独占，A4和B3物理页被同时映射到进程A和B的虚拟地址空间中。只要A进程和B进程中的一者对A4（B3）虚拟内存区域作出写操作，另外一个线程即可读到该写操作的内容。而在不共享物理页面的虚拟内存区域进行写操作，则不反映到另一个进程的虚拟地址空间里。这个同步过程是由硬件的缓存一致性机制（cache coherent mechanism）所保证的，当这两个进程中的一者写入后，另一者再次对该区域的内存进行访问，则会引起cache miss（缓存不命中），于是可以读取到内存中最新的内容。
 
 \subsection{非一致性内存访问架构}
@@ -39,13 +40,14 @@ Linux内核使用Node（节点）、Zone（区）、Page（页）三级结构描
 经过硬件工程师和软件工程师的共同努力，单个服务器装备的CPU数量得到了巨大的提升，单个程序也很难将整个机器跑满，从而促进了云的发展，将海量的物理资源通过虚拟机、容器等形式分发给数量众多的用户，开启了云时代。本文中，巨型虚拟机为客户机提供的是一个NUMA架构的系统，而分布式共享内存（DSM）的性能特性和NUMA架构类似，故针对NUMA架构的优化也可以使用在巨型虚拟机上。
 \section{巨型虚拟机架构简述}
 \subsection{系统虚拟化简介}
-在计算机科学中，增添抽象层次是一个很重要的研究方法。在不同的场景下添加不同的抽象层，得到的结果大不相同。如果将抽象层置于CPU上，则会产生进程的概念，为系统中所有的任务\footnote{Linux将线程和进程都称为任务，task\_struct，不做特殊区分}抽象出可以独占的CPU，从而让CPU被分时复用，从而使得其性能得到最大化的利用。如果将该抽象层置于物理内存之上，则产生虚拟内存的概念，使得进程获得了一个连续的广阔的虚拟地址空间。如果抽象出一个ISA（Instruction set architecture，指令集架构），即一个计算机运行的硬件环境，则是虚拟化（system virtualization）这一重要概念。VMM（虚拟机管理器）可将客户机运行在虚拟的硬件之上，系统虚拟化将操作系统与底层硬件解偶，具有诸多的优势，例如良好的封装性、硬件无关性\cite{sysv}，这使得虚拟机可以在任何时候停止执行，通过快照在任何时间恢复先前的执行，方便了虚拟机的迁移与容错，促进数据中心的负载均衡。本文正是利用了虚拟化这个抽象层的这一优点。
+在计算机科学中，增添抽象层次是一个很重要的研究方法。在不同的场景下添加不同的抽象层，得到的结果大不相同。如果将抽象层置于CPU上，则会产生进程的概念，为系统中所有的任务\footnote{Linux将线程和进程都称为任务，task\_struct，不做特殊区分}抽象出可以独占的CPU，从而让CPU被分时复用，从而使得其性能得到最大化的利用。如果将该抽象层置于物理内存之上，则产生虚拟内存的概念，使得进程获得了一个连续的广阔的虚拟地址空间。如果抽象出一个ISA（Instruction set architecture，指令集架构），即一个计算机运行的硬件环境，则是虚拟化（system virtualization）这一重要概念。VMM（虚拟机管理器）可将客户机运行在虚拟的硬件之上，系统虚拟化将操作系统与底层硬件解偶，具有诸多的优势，例如良好的封装性和硬件无关性\cite{sysv}，这使得虚拟机可以在任何时候停止执行，通过快照在任何时间任何环境恢复先前的执行，方便了虚拟机的迁移与容错，也促进了数据中心的负载均衡。本文正是利用了虚拟化这个抽象层的这一优点。
 
 历史上，纯软件虚拟化技术的出现早于硬件辅助的虚拟化技术。早期的二进制翻译技术（即将每条客户机指令在执行时进行翻译，类似于解释型编程语言），是完全基于软件的虚拟化。由于软件模拟硬件行为的复杂性，纯软件的虚拟机监控器工程量巨大，代码复杂，同时模拟出的虚拟硬件性能相比于真实硬件有明显下降。之后出现了半虚拟化（Para-Virtualization）技术来弥补纯软件虚拟化方式的不足。其想法是为虚拟机管理器定制客户机OS，使得客户机明确地知晓自己处在虚拟化环境中，与虚拟机管理器相互配合，解决了体系结构造成的虚拟化漏洞。最具有代表性的基于半虚拟化的虚拟机监控器就是Xen\cite{artofxen}，Xen运行的定制的guest OS调用Xen的接口配合Xen完成虚拟化功能。但是，由于Windows等闭源操作系统的存在，半虚拟化的可应用范围依然受限。现如今，硬件辅助的虚拟化是应用最为广泛的虚拟化方式。Intel推出的VT-x（Virtualization Technology for x86 processors）技术\cite{intelv}和AMD推出的SVM（Secure Virtual Machine Architecture）技术\cite{amdv}在现有的CPU指令集架构上增加了专用于系统虚拟化的指令，例如Intel的VMX指令（有VMPTRLD、VMREAD、VMWTRITE等）\cite{intelSDM}。x86架构的处理器有根与非根两种运行模式，客户机运行在非根模式，当客户机的特权指令执行时，将触发VMexit，于是CPU运行模式自动转换，使得VMM可以通过trap-and-emulate（陷入并模拟）方式模拟客户机的特权指令。硬件辅助的优点是免去了客户机的修改；又由于客户机指令无需翻译，便可以直接运行在真实的硬件CPU上，使得CPU虚拟化的代价也大大减小。
 
-对于内存虚拟化，传统的方式是为每一个客户机进程维护一个shadow page table（SPT，称为影子页表），代替客户机自带的页表，将其覆盖（shadow），每当进程修改GPT，就需要对SPT进行维护。然而当客户机进程数量较大时，影子页表维护和保存的开销将会十分可观。同时，由于客户机修改自己的页表（GPT）时SPT也要进行相应的修改，VMM将GPT所占的内存标记为写保护（write protected），当客户机修改GPT时会引起VMexit，退出到VMM中由VMM完成对SPT的维护。这对于memory intensive（内存密集）型任务是一种灾难，因为会引起大量的VMexit，严重影响其性能。硬件机制EPT（Extended Page Table）使用硬件维护的GPA到HPA的映射，替代了软件实现的SPT。客户机依然使用自己的CR3指针进行地址翻译，将GVA翻译为GPA，而每一个guest OS都有其对应的扩展页表，EPT base pointer（扩展页表基指针）指向扩展页表（EPT），将GPA通过硬件翻译为HPA。于是，客户机修改自身的GPT（guest page table）时无需引起VMexit，提高了性能。硬件上也有类似于传统页表TLB（translation look aside buffer）的应用于EPT的页表，缓存了EPTE（EPT表项），加快了由GPA到HPA的翻译。使用本文所使用的巨型虚拟机即利用了这一硬件扩展，实现了内存的高效虚拟化。
+对于内存虚拟化，传统的方式是为每一个客户机进程维护一个shadow page table（SPT，称为影子页表），代替客户机自带的页表，将其覆盖（shadow），每当进程修改GPT，就需要对SPT进行维护。然而当客户机进程数量较大时，影子页表维护和保存的开销将会十分可观。同时，由于客户机修改自己的页表（GPT）时SPT也要进行相应的修改，VMM将GPT所占的内存标记为写保护（write protected），当客户机修改GPT时会引起VMexit，退出到VMM中由VMM完成对SPT的维护。这对于memory intensive（内存密集）型任务是一种灾难，因为会引起大量的VMexit，严重影响其性能。硬件机制EPT（Extended Page Table）使用硬件维护的GPA到HPA的映射，替代了软件实现的SPT。客户机依然使用自己的CR3指针进行地址翻译，将GVA翻译为GPA，而每一个guest OS都有其对应的扩展页表，EPT base pointer（扩展页表基指针）指向扩展页表（EPT），将GPA通过硬件翻译为HPA。于是，客户机修改自身的GPT（guest page table）时无需引起VMexit，从而使得内存虚拟化的性能相比于影子页表的方式有了很大改进。硬件上也有类似于传统页表TLB（translation look aside buffer）的应用于EPT的页表，缓存了EPTE（EPT表项），加快了由GPA到HPA的翻译。使用本文所使用的巨型虚拟机即利用了这一硬件扩展，实现了内存的高效虚拟化。
 
-VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\expandafter{\romannumeral2}型。Type-\uppercase\expandafter{\romannumeral1}型又称为Hypervisor型，直接运行在裸金属上，全权负责虚拟机的创建、调度、运行、电源管理等，是一个完备的操作系统，所以需要编写大量驱动以及操作系统功能，工程量较大，但也具有更好的性能。而Type-\uppercase\expandafter{\romannumeral2}型VMM事实上是host OS的一部分（内核模块），仅仅具有虚拟化的功能，而最基本的操作系统功能由host OS负责完成。还有混合型虚拟机监控器，它同样运行在裸金属上，但是将设备驱动、设备模型的控制权交由一个特权虚拟机。Xen属于混合性虚拟机，它将操作系统应当实现的功能交由domain 0这一特权操作系统完成。然而，Type-\uppercase\expandafter{\romannumeral1}型和混合型虚拟机需要修改客户机操作系统，这对闭源操作系统是不现实的，同时减小了虚拟化的灵活性，故没有得到大范围应用。而开源虚拟机监控器QEMU-KVM属于Type-\uppercase\expandafter{\romannumeral2}型，KVM\cite{KVM}是Linux内核中安装的kernel module（Linux内核模块），而QEMU\cite{QEMU}是运行于用户态的宿主机应用程序，主要负责应对客户机的I/O请求，将KVM作为其虚拟化加速器，KVM利用x86处理器的VT-x、EPT等硬件辅助虚拟化功能获得了更优的虚拟机执行效率，而无需修改客户机操作系统，得到了广泛的应用。下一节中的巨型虚拟机即通过修改QEMU-KVM这一开源虚拟机监控器得以实现。
+VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\expandafter{\romannumeral2}型。Type-\uppercase\expandafter{\romannumeral1}型又称为Hypervisor型，这个类型的虚拟机监控器直接运行在裸金属上，全权负责虚拟机的创建、调度、运行、电源管理等，是一个完备的操作系统，所以需要编写大量驱动以及操作系统功能，工程量较大，但也具有更好的性能。而Type-\uppercase\expandafter{\romannumeral2}型VMM事实上是host OS的一部分（内核模块），仅仅具有虚拟化的功能，而最基本的操作系统功能由host OS负责完成。还有混合型虚拟机监控器，它同样运行在裸金属上，但是将设备驱动、设备模型的控制权交由一个特权虚拟机。Xen属于混合性虚拟机，它将操作系统应当实现的功能交由domain 0这一特权操作系统完成。然而，Type-\uppercase\expandafter{\romannumeral1}型和混合型虚拟机都要求客户机操作系统进行特定的修改，这对闭源操作系统是不现实的，而且这种修改减小了虚拟化的灵活性，使得操作系统不容易部署在这类虚拟机监控器上，故这两类虚拟机监控器没有得到大范围应用。而开源虚拟机监控器QEMU-KVM属于Type-\uppercase\expandafter{\romannumeral2}型，KVM\cite{KVM}是Linux内核中安装的kernel module（Linux内核模块），而QEMU\cite{QEMU}是运行于用户态的宿主机应用程序，主要负责应对客户机的I/O请求，将KVM作为其虚拟化加速器，KVM利用x86处理器的VT-x、EPT等硬件辅助虚拟化功能获得了更优的虚拟机执行效率，而无需修改客户机操作系统，因此得到了广泛的应用。下一节我们讲述如何对QEMU-KVM进行修改来实现巨型虚拟机。
+
 \subsection{巨型虚拟机架构实现}
 巨型虚拟机属于分布式虚拟机，即把一个分布式系统作为运行的物理基础，对上层提供统一的操作系统接口。其主要目的是为了资源聚合，即将分布式系统中的多个普通单机聚合起来，形成一个纵向扩展的虚拟机。例如，普通计算机的CPU核心数目一般在50以内，而更多CPU核心数目的机器则会非常昂贵\footnote{36个CPU核心是服务器较为典型的配置。详见 https://www.quora.com/What-are-the-specs-of-a-typical-modern-server}。有了巨型虚拟机，我们可以将多个普通且廉价的物理机聚合起来，启动一个拥有海量资源的虚拟机，例如将5个配备36个CPU的服务器进行资源聚集，我们可以得到一个拥有180个虚拟CPU的客户机，这是单个物理机很难达到的配置，同时具有了纵向扩展系统和横向扩展系统的优势。
 
@@ -56,7 +58,7 @@ VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\
 
 \noindent\textbf{分布式共享内存}\quad 内存虚拟化模块是巨型虚拟机最关键的部件，为所有的QEMU实例提供了和普通内存完全相同的接口，使得所有虚拟机共享完全相同的虚拟地址空间。普通QEMU为虚拟机分配内存的原理是，通过执行一次mmap()函数，在宿主机虚拟地址空间中分配guest OS物理内存。在分布式共享内存开发的初期，为了尽早测试分布式共享内存的代码，巨型虚拟机在单机上进行测试，将所有QEMU实例的虚拟机内存映射到同一块内存，即对相同的文件调用mmap()函数，从而使得所有QEMU实例拥有共享的内存空间。在开发的后期，在KVM中实现了DSM模块，并与QEMU对接，才转向真正分布式的DSM实现，即通过RDMA或TCP协议进行所有QEMU实例之间内存的同步。
 
-如图\ref{fig:DSM}所示，分布式共享内存（DSM）主要通过维护EPT中页表项的状态，即维护虚拟机所拥有物理内存页的状态，修改EPT的映射，将客户机的物理内存映射到集群中的各个节点。DSM的设计基于Ivy\cite{ivy}，Ivy实现了MSI protocol，满足了SC（sequential consistency，顺序一致性）。每个客户机物理页的状态分为Modified：本地vCPU对页作出修改，远程vCPU尚未获得该页的修改，Shared：本地vCPU和远程多个vCPU共享该页，Invalid：需要向其他节点获取该页的最新拷贝，否则本地vCPU无权对该页进行读写。所以，在某个dQEMU实例触发Page fault时，需要使用RDMA协议或TCP协议向远程节点请求最新的数据页。由于巨型虚拟机中的分布式共享内存需要至少实现x86-TSO（Total Store Order）\cite{tso}弱的内存模型，故节点间内存同步的次数和较弱的内存一致性模型相比更多。如果巨型虚拟机的两个节点上的进程相互共享过多的内存，势必会增加内存同步的开销。分析并减小这类开销是本文关注的重点之一。
+如图\ref{fig:DSM}所示，分布式共享内存（DSM）主要通过维护EPT中页表项的状态，即维护虚拟机所拥有物理内存页的状态，修改EPT的映射，将客户机的物理内存映射到集群中的各个节点。DSM的设计基于Ivy\cite{ivy}，Ivy实现了MSI protocol，满足了SC（sequential consistency，顺序一致性）。每个客户机物理页的状态分为Modified：本地vCPU对页作出修改，远程vCPU尚未获得该页的修改，Shared：本地vCPU和远程多个vCPU共享该页，Invalid：需要向其他节点获取该页的最新拷贝，否则本地vCPU无权对该页进行读写。所以，在某个dQEMU实例触发Page fault时，需要使用RDMA协议或TCP协议向远程节点请求最新的数据页。由于巨型虚拟机中的分布式共享内存需要至少实现x86-TSO（Total Store Order）\cite{tso}弱的内存模型，故节点间内存同步的次数和较弱的内存一致性模型相比更多。如果巨型虚拟机的两个节点上的进程相互共享过多的内存，势必会增加内存同步的开销。
 \label{chap:DSM}
 \begin{figure}[!htp]
   \centering
@@ -67,7 +69,7 @@ VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\
   \label{fig:DSM}
 \end{figure}
 
-\noindent\textbf{I / O虚拟化}\quad 实现分布式虚拟I/O需要解决以下问题：虚拟机vCPU如何对远程节点上的的模拟设备进行I/O访问，以及如何使得远程的虚拟设备产生的中断准确的路由到对应的vCPU。对于第二个问题，分布式vCPU的虚拟化中对于IPI的处理已经给出了答案，即在QEMU 0上放置master IOAPIC，而在QEMU 1-3上放置dummy IOAPIC。在设备中断到达之后写入dummy IOAPIC时，将信息同步至master IOAPIC，由master IOAPIC将中断通过dummy APIC转发给目的vCPU。对于第一个问题，CPU对设备进行I/O访问有两种方式：PIO（Programmed I/O，针对于x86架构）和MMIO（Memory Mapped I/O）。客户机执行I/O指令后退出到VMM，VMM检查I/O指令的目的设备。如果I/O访问的目的设备是远程机器上的设备，则需要将该请求转发给远程设备，在处理完成后将处理结果发送回来。目前，巨型虚拟机的模拟设备全部放置在master node上。
+\noindent\textbf{I / O虚拟化}\quad 实现分布式虚拟I/O需要解决以下问题：虚拟机vCPU如何对远程节点上的的模拟设备进行I/O访问，以及如何使得远程的虚拟设备产生的中断准确的路由到对应的vCPU。对于第二个问题，分布式vCPU的虚拟化中对于IPI的处理已经给出了答案，即在QEMU 0上放置master IOAPIC，而在QEMU 1-3上放置dummy IOAPIC。在设备中断到达之后写入dummy IOAPIC时，将信息同步至master IOAPIC，由master IOAPIC将中断通过dummy APIC转发给目的vCPU。对于第一个问题，CPU对设备进行I/O访问有两种方式：PIO（Programmed I/O，针对于x86架构）和MMIO（Memory Mapped I/O）。客户机执行I/O指令后退出到VMM，VMM检查I/O指令的目的设备。如果I/O访问的目的设备是远程机器上的设备，则需要将该请求转发给远程设备，在处理完成后将处理结果发送回来。
 
 \section{分布式共享内存性能分析}
 \subsection{性能瓶颈}
