--- a/tex/chapter05.tex
+++ b/tex/chapter05.tex
@@ -92,7 +92,7 @@
   \label{fig:dur_over}
 \end{figure}
 
-本文除了CPU和基尼系数两个测试指标之外，还有两个测试指标：所有任务的平均超量使用资源（$Overcommit$），以及所有任务的平均延迟（$Duration$）。这三项指标均是越低越好，网络带宽占用小的调度算法对集群其他工作负载影响小；任务的超量使用资源越少，则表明在真实的集群中该任务的QoS影响越小，调度算法平衡性能更强；任务的延迟越小，则表明任务等待调度的时间越短，即获得了更多的运行时间。如图\ref{fig:dur_over}所示，横轴调度算法的顺序与图\ref{fig:cpu_gini}相同，两项指标虽然有起伏，但总体在升高，和我们测得的CPU与基尼系数两项数据大致吻合。
+本文除了CPU和基尼系数两个测试指标之外，还有两个测试指标：所有任务的平均超量使用资源（$Overcommit$），以及所有任务的平均延迟（$Duration$）。这两项指标均是越低越好：任务的超量使用资源越少，则表明在真实的集群中该任务的QoS影响越小，调度算法平衡性能更强；任务的延迟越小，则表明任务等待调度的时间越短，即获得了更多的运行时间。如图\ref{fig:dur_over}所示，横轴调度算法的顺序与图\ref{fig:cpu_gini}相同，两项指标虽然有起伏，但总体在升高，和我们测得的CPU与基尼系数两项数据大致吻合。
 
 调度算法的网络开销也是我们关注的重点。对于网络带宽占用，我们统计了每个迁移循环的网络开销，并将数据做累积，计算从开始集群仿真到每个迁移循环为止的网络用量。如图\ref{fig:minetwork}，仿真集群开始运行时，网络开销较小，这是由于集群的任务数量尚未填满，无需进行调度。其后进程数量逐渐增多，调度的网络开销也增加，直到最后进程逐渐完成，集群负载再次下降，调度的网络开销也逐渐变小。对不同的调度算法进行对比，粗粒度的调度算法网络开销最大，由于每个循环中迁移的进程数目较多；不做迁移则网络开销为0，按照缓存不命中排序的算法网络开销最小，由于MPI真实地反映了进程频繁访问页面的多少。按照CPU指标排序的算法的网络开销普遍大于按照Memory指标排序的算法，这也是我们预期之内的。
 \begin{figure}[!htp]
