--- a/tex/chapter01.tex
+++ b/tex/chapter01.tex
@@ -18,7 +18,7 @@
 在分布式集群的调度策略方面，Mesos\cite{mesos}设计了细粒度的资源分配器，然而由于现今的分布式框架都带有极其复杂的调度器，彼此之间相互影响，因此Mesos添加了双层调度器，在各个分布式框架之间进行协调，使得各个框架达到最优的数据局部性（data locality）。Omega\cite{omega}是谷歌的分布式集群管理系统，其核心是一个共享状态、无锁的分布式调度器，调度过程的延迟大大下降，相比于集中式的集群调度器更好地应对了集群中任务对资源需求的极速变化。随着数据处理任务的并行度越来越高，以及对延迟要求越来越高，Sparrow\cite{sparrow}提出了一个分布式的、细粒度的调度器，解决了集中式采样系统造成的吞吐量下降、延迟上升的问题。Graphene\cite{graphene}关注的是分布式系统中任务之间的依赖关系，以及多元化的资源需求。在并行数据处理系统中，任务之间的依赖关系网（DAG），是调度器作出调度决策时所关注的主要信息。Graphene在任务运行时计算出任务之间的DAG，对未来的调度决策进行改进。
 
 \section{本文工作}
-资源重分配是动态平衡集群工作负载的方案，可通过集群中工作负载的动态迁移提高集群总体的资源使用率。而进程迁移有残余依赖问题，不予考虑，而相较于虚拟机的热迁移，容器热迁移具有较高的下线时间（downtime）。为了避免虚拟机热迁移造成的巨大的网络开销和迁移过程中客户机进程的下线时间，本文用分布式虚拟机客户机内的进程调度器代替虚拟机的热迁移，将分布式虚拟机GiantVM（巨型虚拟机）部署在集群中，编写巨型虚拟机客户机的shell调度脚本，动态感知集群节点负载，在节点之间按需调度客户机进程，达到了集群中资源重分配的目的，提高了集群总体的CPU使用率。而分布式虚拟机中客户机进程的迁移仅涉及较少几部分的内存页传输，网络开销远小于虚拟机热迁移，又消除了下线时间，是高效的迁移方式。本文还使用了谷歌Borg集群提供的$task\_usage$、$task\_event$两组数据。这两组数据在较长时间段内对集群的工作负载进行追踪，可以用来模拟一个高度仿真的由800台相同机器组成的分布式集群。我们在此模拟集群上对巨型虚拟机的迁移过程进行仿真，测试了较长工作时间内调度脚本的负载平衡性能。本文还分析了调度脚本的可优化空间，设计了更细粒度的调度算法，从而使得平衡效果更强；同时将被迁移的进程按照CPU、内存两类指标进行排序，进一步优化了调度算法的平衡能力，减小了平衡过程的网络开销。
+资源重分配是动态平衡集群工作负载的方案，可通过集群中工作负载的动态迁移提高集群总体的资源使用率。而进程迁移有残余依赖问题，不予考虑，而相较于虚拟机的热迁移，容器热迁移具有较高的下线时间（downtime）。为了避免虚拟机热迁移造成的巨大的网络开销和迁移过程中客户机进程的下线时间，本文用分布式虚拟机客户机内的进程调度器代替虚拟机的热迁移，将分布式虚拟机GiantVM（巨型虚拟机）部署在集群中，编写巨型虚拟机客户机的shell调度脚本，动态感知集群节点负载，在节点之间按需调度客户机进程，达到了集群中资源重分配的目的，提高了集群总体的CPU使用率。而分布式虚拟机中客户机进程的迁移仅涉及较少几部分的内存页传输，网络开销远小于虚拟机热迁移，又消除了下线时间，是高效的迁移方式。本文还使用了谷歌Borg集群提供的$task\_usage$、$task\_events$两组数据。这两组数据在较长时间段内对集群的工作负载进行追踪，可以用来模拟一个高度仿真的由800台相同机器组成的分布式集群。我们在此模拟集群上对巨型虚拟机的迁移过程进行仿真，测试了较长工作时间内调度脚本的负载平衡性能。本文还分析了调度脚本的可优化空间，设计了更细粒度的调度算法，从而使得平衡效果更强；同时将被迁移的进程按照CPU、内存两类指标进行排序，进一步优化了调度算法的平衡能力，减小了平衡过程的网络开销。
 
 
 \section{本文结构}
